Source/JavaScriptCore/b3/B3SwitchValue.h
@@ -50,13 +50,10 @@ public:
     CaseCollection cases(const BasicBlock* owner) const { return CaseCollection(this, owner); }
     CaseCollection cases() const { return cases(owner); }
 
-    // This removes the case and reorders things a bit. If you're iterating the cases from 0 to N,
-    // then you can keep iterating after this so long as you revisit this same index (which will now
-    // contain some other case value). This removes the case that was removed.
-    SwitchCase removeCase(BasicBlock*, unsigned index);
-
     bool hasFallThrough(const BasicBlock*) const;
     bool hasFallThrough() const;
+
+    BasicBlock* fallThrough(const BasicBlock* owner);
 
     // These two functions can be called in any order.
     void setFallThrough(BasicBlock*, const FrequentedBlock&);
